fix(sidenav) : Avoid page overflow to the right

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -4,5 +4,6 @@
 
   #main-content {
     width: 100%;
+    overflow: hidden;
   }
 }
